Conditionally show game status and the Play Again button

--- a/tictactoe/react/src/tictactoe.css
+++ b/tictactoe/react/src/tictactoe.css
@@ -42,11 +42,11 @@ ol, ul {
 }
 
 .game {
-  display: flex;
-  flex-direction: row;
+  width: 200px;
 }
 
 .game-info {
-  margin-left: 20px;
+  margin-left : 5px;
+  width: 200px;
 }
 
